Upcoming:
- Better tooltips for many blocks and items
- The filter module now supports an alternative for the ore dictionary where it will try to match blocks using common known tags

1.0.1-alpha:
- Ported the filter module (for storage, builder, ...)

0.0.12:
- Updates to latest McJtyLib

0.0.11:
- Information Screen from RFTools Power has been moved to RFTools Base
- The information screen will now remember the 'mode' when it is broken
- Right clicking the information screen will activate the block behind it instead
- The XNet API is now part of RFToolsBase

0.0.10:
- Fixed a serious networking problem which could cause 'invalid discriminator spam' on servers

0.0.9:
- Fixed a networking problem on servers

0.0.8:
- API changes for the storage scanner
- Update to latest McJtyLib

0.0.7:
- The Machine infuser actually works
- Reintroduced infused diamond and enderpearls as crafting ingredients

0.0.3:
- Update to latest Forge

0.0.2:
- Update to 1.14.4