@@ -7,10 +7,10 @@ import mcjty.lib.gui.Window;
 import mcjty.lib.gui.layout.HorizontalAlignment;
 import mcjty.lib.gui.layout.HorizontalLayout;
 import mcjty.lib.gui.layout.PositionalLayout;
-import mcjty.lib.gui.widgets.*;
 import mcjty.lib.gui.widgets.Button;
 import mcjty.lib.gui.widgets.Label;
 import mcjty.lib.gui.widgets.Panel;
+import mcjty.lib.gui.widgets.*;
 import mcjty.lib.tileentity.GenericTileEntity;
 import mcjty.lib.typed.Key;
 import mcjty.lib.typed.Type;
@@ -102,6 +102,8 @@ public class GuiFilterModule extends GenericGuiContainer<GenericTileEntity, Filt
             damageMode.setCurrentChoice(tagCompound.getBoolean("damageMode") ? 1 : 0);
             nbtMode.setCurrentChoice(tagCompound.getBoolean("nbtMode") ? 1 : 0);
             modMode.setCurrentChoice(tagCompound.getBoolean("modMode") ? 1 : 0);
+        } else {
+            setBlacklistMode("White");
         }
 
         Panel toplevel = new Panel(minecraft, this).setLayout(new PositionalLayout()).setBackground(iconLocation)
